--- a/hello.html
+++ b/hello.html
@@ -5,13 +5,19 @@
         Hello!
     </title>
 </head>
+<style>
+    h1 { 
+        color: red;
+    }
 
+</style>
 <body>
 <h1>
     Welcome to my page
 </h1>
 
     Hello world
-</body>
+</body>  
+
 
 </html>
