--- a/hello.html
+++ b/hello.html
@@ -9,10 +9,10 @@
     h1 { 
         color: red;
     }
-
+    
 </style>
 <body>
-<h1>
+<h1 style="color: blue;">
     Welcome to my page
 </h1>
 <h1>
